--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -20,6 +20,16 @@ script.
 			{ data: post } = x
 		)
 
+	vote = (current_vote, mouse_button_number) ->
+		new_vote = 
+			switch mouse_button_number
+				when 0 # left
+					if current_vote is 1 then 0 else 1
+				when 2 # right
+					if current_vote is -1 then 0 else -1
+		if new_vote != current_vote
+			api.submit(api.ID('post_vote', short_id), { numerical_vote: new_vote })
+
 {#if post}
 	a.post-link(class:post-downvoted={post.likes === false} class:post-nsfw={post.over_18} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-likes={post.likes} data-radial-menu='post' data-short_id={post_short_id} href={format_url({ post_short_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
 		{#if show_subreddit}
@@ -28,7 +38,7 @@ script.
 			PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
 		HotnessMeter(create_time={post.created_utc} edit_time={post.edited} num_comments={post.num_comments} score={post.score})
 		h1.post-link-title(class:md-spoiler-text={post.spoiler}) {post.title}
-		button.post-link-score(on:mousedown={() => api.submit(api.ID('post_vote', post_short_id), { numerical_vote: post.likes ? 0 : 1 })}) {post.hide_score ? '?' : post.score} ({post.num_comments}) 
+		button.post-link-score(on:mousedown={e => vote(post.likes === true ? 1 : post.likes === false ? -1 : 0, e.button)}) {post.hide_score ? '?' : post.score} ({post.num_comments}) 
 
 style.
 	.post-link
@@ -47,6 +57,10 @@ style.
 		position absolute
 		right calc(100% + 1em)
 		white-space pre
+		.post-upvoted &
+			color salmon
+		.post-downvoted &
+			color var(--c-text-faint)
 	.post-link-title
 		font-size 16px
 		font-weight inherit
