--- a/src/ui/app/context/AppRadialMenuContext.pug
+++ b/src/ui/app/context/AppRadialMenuContext.pug
@@ -1,93 +1,93 @@
 script.
-	import radial_menu_choices from './radial_menu_choices.coffee'
+	import available_menus from './radial_menus.coffee'
 
+	active = false
 	choice = null
-	dataset = null
+	object_data = null
+	menu = null
 	position = null
-
-	is_unmodified_event =
-		(event) -> not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
-	is_unmodified_right_click =
-		(event) -> is_unmodified_event(event) and event.button is 2 and event.detail > 0
+	radius = 21
 
 	document.addEventListener('contextmenu',
 		(event) ->
-			if dataset and position
+			if active
 				event.preventDefault()
-				radial_menu_choices[dataset.radialMenu][choice](dataset)
+				menu[choice](object_data).action()
 				choice = null
-				dataset = null
+				menu = null
+				object_data = null
 				position = null
+				active = false
 	)
 
 	document.addEventListener('mousedown',
 		(event) ->
-			if is_unmodified_right_click(event)
+			if event.button is 2 and event.detail > 0
 				element = event.target.closest("[data-radial-menu]")
 				if element
+					object_data = element.dataset
+					variant = switch
+						when event.ctrlKey and event.shiftKey then 'ctrlShift'
+						when event.ctrlKey then 'ctrl'
+						else 'default'
+					menu = available_menus[object_data.radialMenu][variant]
 					choice = 0
-					dataset = element.dataset
 					position = [event.x, event.y]
+					active = true
 	)
 
 	document.addEventListener('mousemove',
 		(event) ->
-			if dataset and position
+			if active
 				delta_x = event.x - position[0]
 				delta_y = event.y - position[1]
-				if Math.abs(delta_x) < 10 and Math.abs(delta_y) < 10
+				if Math.abs(delta_x) < radius and Math.abs(delta_y) < radius
 					choice = 0
 				else
 					if Math.abs(delta_x) > Math.abs(delta_y)
 						if delta_x > 0
-							choice = 1
+							choice = 2
 						else
 							choice = 4
 					else
 						if delta_y > 0
 							choice = 3
 						else
-							choice = 2
+							choice = 1
 	)
 
 slot
-{#if dataset && position}
-	menu.radial-menu(style='left: {position[0] - 10}px; top: {position[1] - 10}px') ・
-		figure.radial-menu-arrow.radial-menu-arrow-east(class:radial-menu-arrow-selected={choice === 1}) ›
-		figure.radial-menu-arrow.radial-menu-arrow-north(class:radial-menu-arrow-selected={choice === 2}) ‹
-		figure.radial-menu-arrow.radial-menu-arrow-south(class:radial-menu-arrow-selected={choice === 3}) ›
-		figure.radial-menu-arrow.radial-menu-arrow-west(class:radial-menu-arrow-selected={choice === 4}) ‹
+{#if active}
+	menu.radial-menu(style='height: {radius * 2}px; left: {position[0] - radius}px; top: {position[1] - radius}px; width: {radius * 2}px') ・
+		figure.radial-menu-icon.radial-menu-icon-north(class:radial-menu-icon-selected={choice === 1}) {menu[1](object_data).icon}
+		figure.radial-menu-icon.radial-menu-icon-east(class:radial-menu-icon-selected={choice === 2}) {menu[2](object_data).icon}
+		figure.radial-menu-icon.radial-menu-icon-south(class:radial-menu-icon-selected={choice === 3}) {menu[3](object_data).icon}
+		figure.radial-menu-icon.radial-menu-icon-west(class:radial-menu-icon-selected={choice === 4}) {menu[4](object_data).icon}
 
 style.
 	.radial-menu
 		align-items center
+		border 1px solid salmon
+		border-radius 50%
 		cursor default
 		display flex
-		font-size 2em
+		font-size 1.5em
 		justify-content center
-		height 0.75em
 		position fixed
-		width 0.75em
-	.radial-menu-arrow
+	.radial-menu-icon
 		align-items center
 		display flex
 		justify-content center
 		height 100%
 		position absolute
 		width 100%
-		&.radial-menu-arrow-selected
-			color orangered
-	.radial-menu-arrow-east
+		&.radial-menu-icon-selected
+			font-size 2em
+	.radial-menu-icon-east
 		left 100%
-		padding-bottom 0.1em
-	.radial-menu-arrow-north
+	.radial-menu-icon-north
 		bottom 100%
-		padding-left 0.1em
-		writing-mode vertical-rl
-	.radial-menu-arrow-south
+	.radial-menu-icon-south
 		top 100%
-		padding-left 0.1em
-		writing-mode vertical-lr
-	.radial-menu-arrow-west
+	.radial-menu-icon-west
 		right 100%
-		padding-bottom 0.1em
