--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -10,15 +10,13 @@ script.
 	export post_short_id = null
 	export show_subreddit = false
 	
-	post = api.read(api.ID('post', post_short_id))?.data
-	if !post
-		api.loadWatch(api.ID('post', post_short_id, 'confidence', 25), (x) ->
-			{ data: post } = x
-		)
-	else if post.num_comments > 0 and !post.replies?.length
-		api.preload(api.ID('post', post_short_id, post.suggested_sort or 'confidence', 25), (x) ->
-			{ data: post } = x
-		)
+	post = null
+
+	api.loadWatch(api.ID('post', post_short_id), (x) ->
+		{ data: post } = x
+		if post?
+			api.preload(api.ID('post', post_short_id, post.suggested_sort or 'confidence', 25))
+	)
 
 	vote = (current_vote, mouse_button_number) ->
 		new_vote = 
@@ -28,10 +26,10 @@ script.
 				when 2 # right
 					if current_vote is -1 then 0 else -1
 		if new_vote != current_vote
-			api.submit(api.ID('post_vote', short_id), { numerical_vote: new_vote })
+			api.submit(api.ID('post_vote', post_short_id), { numerical_vote: new_vote })
 
 {#if post}
-	a.post-link(class:post-downvoted={post.likes === false} class:post-nsfw={post.over_18} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-likes={post.likes} data-radial-menu='post' data-short_id={post_short_id} href={format_url({ post_short_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
+	a.post-link(class:post-downvoted={post.likes === false} class:post-nsfw={post.over_18} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-id={post_short_id} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} href={format_url({ post_short_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
 		{#if show_subreddit}
 			SubredditNameTag(name={post.subreddit})
 		{:else if post.link_flair_text}
