--- a/src/ui/feature/feed/Feed.pug
+++ b/src/ui/feature/feed/Feed.pug
@@ -55,6 +55,15 @@ script.
 
 	load_next_page()
 
+svelte:head
+	{#if type === 'collection'}
+		title collection {collection_short_id}
+	{:else if type === 'multireddit'}
+		title {multireddit_name}
+	{:else if type === 'subreddit'}
+		title {subreddit_name}
+	{:else if type === 'user'}
+		title {user_name}
 nav.feed
 	{#if type !== 'collection'}
 		FeedPostListControls(feed_type={type} multireddit_name={multireddit_name} subreddit_name={subreddit_name} user_name={user_name} search_query={search_query} sort={sort} time_range={time_range})
