--- a/src/ui/feature/user/User.pug
+++ b/src/ui/feature/user/User.pug
@@ -14,6 +14,8 @@ script.
 	api.loadWatch(api.ID('user', name), (x) -> { data: user } = x)
 	api.loadWatch(api.ID('user_trophies', name), (x) -> { data: trophies } = x)
 
+svelte:head
+	title {name.toLowerCase()} (user)
 {#if user}
 	article.user
 		section.user-basic-info
