--- a/src/ui/feature/post/PostComments.pug
+++ b/src/ui/feature/post/PostComments.pug
@@ -6,19 +6,19 @@ script.
 	import Comment from '../comment/Comment.pug'
 	
 	export focus_comment_parent_count = null
-	export focus_comment_short_id = null
+	export focus_comment_id = null
 	export initial_count = null
-	export post_short_id = null
+	export post_id = null
 	export sort = null
 
 	loading = false
 	more_replies_loading = false
 	post = null
 	
-	if focus_comment_short_id
-		setContext('focus_comment_short_id', focus_comment_short_id)
+	if focus_comment_id
+		setContext('focus_comment_id', focus_comment_id)
 	
-	api.loadWatch(api.ID('post', post_short_id, sort or 'confidence', initial_count, focus_comment_short_id, focus_comment_parent_count), (x) ->
+	api.loadWatch(api.ID('post', post_id, sort or 'confidence', initial_count, focus_comment_id, focus_comment_parent_count), (x) ->
 		{ data: post, loading } = x
 		if post?.more_replies
 			api.watch(post.more_replies_id, (x) ->
@@ -28,8 +28,8 @@ script.
 
 ol
 	{#if post}
-		{#each post.replies as reply_short_id (reply_short_id)}
-			Comment(short_id={reply_short_id})
+		{#each post.replies as reply_id (reply_id)}
+			Comment(id={reply_id})
 		{#if post.num_more_replies > 0}
 			.post-more-replies
 				Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} more")
